MBA corrects spacing in the content area

--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -55,9 +55,9 @@ header {
     text-align: center;
     // need to bring menu elements closer together
     .large-3 {
-      border: 1px solid white;
-      // padding: 0px 0px 0px 0px;
-      margin: 0px;
+      // border: 1px solid white;
+      padding: 0px 0px 0px 0px;
+      // margin: 0px;
       // .nav-span {
       //   border: 1px solid yellow;
       //   margin-left: 20px;
@@ -80,20 +80,22 @@ section {
     margin-bottom: 40px;
     background-color: $main_blue;
     border-radius: 5px;
-
     // opacity: 0.9;
     .row {
 
       .large-8 {
         #content_left {
+          // border: 5px solid red;
           // background-color: $main_blue;
           padding-left: 15px;
           font-family: 'Open Sans';
           font-weight: 300;
           // border-radius: 5px;
+          margin-right: 50px;
           p {
+            margin-right: 50px;
             font-size: 26px;
-            padding: 50px;
+            padding: 60px;
             opacity: 0.8;
             span {
               font-weight: 700;
@@ -105,7 +107,7 @@ section {
       .large-4 {
         #content_right {
           // background-color: pink;
-          background-color: $main_blue;
+          // background-color: $main_blue;
           border-radius: 5px;
           
           .row {
@@ -133,7 +135,7 @@ section {
               #find_out_more {
                 // border: 5px solid orange;
                 text-align:center;
-                padding-top: 180px;
+                padding-top: 260px;
         
                 #button {
                   background-color: $faded_gray;
